Fix overlapping filter button

--- a/app/assets/stylesheets/pages/my-track.scss
+++ b/app/assets/stylesheets/pages/my-track.scss
@@ -404,6 +404,13 @@ body.namespace-my.controller-tracks.action-show {
 
         .filters {
             margin-bottom:20px;
+            .widget-filter {
+                &.status {
+                    .selectize-control {
+                        width:120px;
+                    }
+                }
+            }
         }
     }
     .deprecated-exercises,
